@@ -1,4 +1,6 @@
 version 0.99.5 (not yet released)
+           * added option for cubic spline interpolation in interp function
+           (order=3) using scipy.ndimage.
            * added "near-sided perspective" projection for a satellite
            view at an arbitrary altitude.
            * patch from Stephane Raynaud to pass format string to
